panko-compiletest/src/snapshots/panko_compiletest__preprocess-panko__tests__cases__preprocessor__test_error_directive_does_not_start_at_beginning_of_line_followed_by_directive.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/preprocessor/test_error_directive_does_not_start_at_beginning_of_line_followed_by_directive.c
---
success: true
exit_code: 0
----- stdout -----



int

main () {
    return 42;
}

----- stderr -----
